--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p>1: Le support client n'a pas résolu mon problème, très frustré.</p>
         <p>3: Moyennement satisfait, le produit est ok mais rien de spectaculaire.</p>
         <p>5: Impressionnant! Qualité supérieure et excellent support.</p>
-        <input type="button" value="Filtrer Commentaires" />
+        <input type="button" value="Filtrer Commentaires" onclick = "filtrerCommentairesCritiques()" />
     </div>
     <div id="div2">
         <h1>Visualisation Interactive des Tendances des Données</h1>
